@@ -90,6 +90,9 @@ New Features
               through the new API methods.
               (Noble Paul via shalin)
 
+21.SOLR-1062: A LogTransformer which can log data in a given template format.
+              (Jon Baer, Noble Paul via shalin)
+
 Optimizations
 ----------------------
 1. SOLR-846:  Reduce memory consumption during delta import by removing keys when used
